Add Licence header to all java files